# QMDemo

./: .gitignore
FunctionalModule/: FunctionalModule.md  FunctionalModule.pro
FunctionalModule/DeviceManagement/: DeviceManagement.pro  comchange.cpp  comchange.h  porttest.cpp  porttest.h
FunctionalModule/MouseKeyEvent/: MouseKeyEvent.pro  widget.cpp  widget.h
FunctionalModule/MouseKeyEvent/GlobalMouseKey/: globalkeyevent.h  globalkeyevent_win.cpp  globalmouseevent.h  globalmouseevent_win.cpp
FunctionalModule/QMPlayer/: QMPlayer.pro
FunctionalModule/QMPlayer/Module/: slidervideo.cpp
FunctionalModule/QMPlayer/WidgetBase/: mwidgetbase.cpp  mwidgetbase.h
FunctionalModule/QMWidget/: QMWidget.pro
FunctionalModule/QMWidget/WidgetBase/: mwidgetbase.cpp  mwidgetbase.h
FunctionalModule/ScanFile/: ScanFile.pro  ThreadPool.h  main.cpp  widget.cpp  widget.h  widget.ui
FunctionalModule/ScanFile/ScanFileLib/: CMakeLists.txt  ScanFIle.cpp  ScanFile.h  ThreadPool.h
FunctionalModule/ScanFile/include/: ScanFile.h  SpinLock.h  ThreadSafeQueue.h
FunctionalModule/ScanFile/lib/: ScanFile.lib  ScanFiled.lib
FunctionalModule/SnippingTool/: SnippingTool.pro  mainwindow.cpp  playimage.cpp  screenrect.cpp  screenrect.h  windowrect.cpp
FunctionalModule/TestCrashHandler/: TestCrashHandler.pro
FunctionalModule/TestCrashHandler/CrashHandler/: CrashHandler.pri  crashhandler.cpp
Web/QtWebExamples/authorization/: authorization.pro
Web/QtWebExamples/minimal/: minimal.pro
Web/QtWebExamples/minimal2/: minimal2.pro
